<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context="com.miranda.edna.mirandachavez.MainActivity">



        <LinearLayout
            android:id="@+id/llay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/textView"
                android:text="@string/bienvenido"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView2"
                android:text="@string/instrucciones"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnActualizar"
                android:text="@string/actualizar"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_width="201dp"/>


            <Spinner
                android:id="@+id/cboDatos"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
            </Spinner>


            <Button
                android:id="@+id/btnproximamente"
                android:text="@string/proximamente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnDetalle"
                android:text="@string/detalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnFin"
                android:text="@string/fin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView"
                android:src="@drawable/andyhola"
                android:contentDescription="@string/texto5"
                android:layout_width="85dp"
                android:layout_height="88dp" />

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/datePicker" />


            <EditText
                android:id="@+id/editMesPic"
                android:layout_height="wrap_content"
                android:layout_width="43dp"
                android:inputType="none" />

 >

            <TextView
                android:id="@+id/lblRegistros"
                android:text="@string/registros"
                android:layout_marginTop="10dp"
                android:layout_width="365dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>


</LinearLayout>


