<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.miranda.edna.mirandachavez.Main2Activity">


                <EditText
                    android:id="@+id/editText1"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

    <!--
       <TextView
           android:id="@+id/lblAgregar"
           android:text="@string/Agregar"
           android:layout_height="wrap_content"
           android:layout_width="match_parent" />

       <EditText
           android:id="@+id/txtAgregar"
           android:layout_height="wrap_content"
           android:layout_width="match_parent" />

       <Button
           android:id="@+id/btnAgregar"
           android:text="@string/Agregar"
           android:layout_height="wrap_content"
           android:layout_width="158dp" />
-->


                <TextView
                    android:id="@+id/lblRegistros"
                    android:text="@string/registros"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Spinner
                    android:id="@+id/cboDatos"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                </Spinner>

                <Button
                    android:id="@+id/btnEliminar"
                    android:text="@string/elimSelec"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:layout_width="158dp" />

                <Button
                    android:id="@+id/btnRegresar"
                    android:text="@string/regresar"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="69dp"
                    android:layout_gravity="right" />

                <ImageView
                    android:id="@+id/imageView"
                    android:src="@drawable/andyvuelta"
                    android:contentDescription="@string/texto5"
                    android:layout_width="323dp"
                    android:layout_height="88dp"
                    android:layout_weight="1.09" />

</LinearLayout>




